assets/layout: increase breakpoint size to md for multi col layout to avoid squashed look

--- a/liqd_product/assets/scss/_layout.scss
+++ b/liqd_product/assets/scss/_layout.scss
@@ -24,41 +24,41 @@
 }
 
 .l-col-3-0 {
-    @extend .col-sm-3;
+    @extend .col-md-3;
 }
 
 .l-col-9-3 {
-    @extend .col-sm-9;
-    @extend .offset-sm-3;
+    @extend .col-md-9;
+    @extend .offset-md-3;
 }
 
 .l-col-5-0 {
-    @extend .col-sm-5;
+    @extend .col-md-5;
 }
 
 .l-col-6-0 {
-    @extend .col-sm-6;
+    @extend .col-md-6;
 }
 
 .l-col-8-0 {
-    @extend .col-sm-8;
+    @extend .col-md-8;
 }
 
 .l-col-9-0 {
-    @extend .col-sm-9;
+    @extend .col-md-9;
 }
 
 .l-col-5-7 {
-    @extend .col-sm-5;
-    @extend .offset-sm-7;
+    @extend .col-md-5;
+    @extend .offset-md-7;
 }
 
 .l-col-4-8 {
-    @extend .col-sm-4;
+    @extend .col-md-4;
 }
 
 .l-col-3-9 {
-    @extend .col-sm-3;
+    @extend .col-md-3;
 }
 
 .l-tiles-2,
@@ -70,10 +70,6 @@
     display: flex;
     flex-wrap: wrap;
 }
-
-// .tile {
-//     margin: 0.5*$r-spacer;
-// }
 
 @media (min-width: $breakpoint) {
     .l-tiles-2 {
